# cmake

cmake_static/calc/: CMakeLists.txt
cmake_static/sort/: CMakeLists.txt
cmake_static/test1/: CMakeLists.txt  test1.cpp
cmake_static/test2/: CMakeLists.txt  test2.cpp
cmake_test/: CMakeLists.txt
cmake_test/calc/: CMakeLists.txt  sub.cpp
cmake_test/include/: head.h  sort.h
cmake_test/sort/: CMakeLists.txt  sort_exe.cpp
cmake_test/test1/: CMakeLists.txt
cmake_test/test2/: CMakeLists.txt
